Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-2218

SSL3_WRITE_PENDING TlsSocket error

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.3.2, 1.4.1, 1.6.0, 1.5.1
    • rpc, security
    • None
    • TSAN builds

    Description

      The RaftConsensusITest.TestLargeBatches scenario exhibits flaky behavior, if running the binary built in TSAN configuration.

      In most cases, the test fails with the error message like the following:

      W1114 04:17:44.407441  1773 connection.cc:657] client connection to 127.1.147.67:45133 send error: Network error: failed to write to TLS socket: error:1409F07F:SSL routines:SSL3_WRITE_PENDING:bad write retry:s3_pkt.c:826
      W1114 04:17:44.407811  1773 consensus_peers.cc:411] T bc17135f3b5643dda691863392bda6a3 P 9e51dc8b039e4a599c7b77e5ac6b48fe -> Peer 05a8069cf7a84f918864b5cb4f76f056 (127.1.147.67:45133): Couldn't send request to peer 05a8069cf7a84f918864b5cb4f76f056 for tablet bc17135f3b5643dda691863392bda6a3. Status: Network error: failed to write to TLS socket: error:1409F07F:SSL routines:SSL3_WRITE_PENDING:bad write retry:s3_pkt.c:826. Retrying in the next heartbeat period. Already tried 1 times.
      

      Attachments

        Activity

          People

            tlipcon Todd Lipcon
            aserbin Alexey Serbin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: